--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -12,11 +12,11 @@
 
   <div class="col-6 pl-1 pr-1">
     <div class="row">
-      <div class="col-12 text-right" >
+      <!-- <div class="col-12 text-right" >
         <i class="material-icons cursor-pointer" style="font-size: 20px" (click)="onEditAddress()">
           edit
         </i>
-      </div>
+      </div> -->
       <div class="col-12">
         <span class="font-address" *ngIf="address">
           <p class="ml-2 mb-1" *ngIf="address && address.firstname">
