--- a/src/app/components/header-toolbar/header-toolbar.component.html
+++ b/src/app/components/header-toolbar/header-toolbar.component.html
@@ -6,7 +6,7 @@
     <!-- <span *ngIf="userAuth">
       <mat-icon class="example-icon">notifications</mat-icon>
     </span> -->
-    <span class="profile " *ngIf="!userAuth">
+    <span class="profile overflow-text" *ngIf="!userAuth">
       <span class="user-name" (click)="onLogin()">เข้าสู่ระบบ</span>
       <span class="user-name">/</span>
       <span class="user-name" (click)="onRegister()">สมัครสมาชิก</span>
