--- a/src/app/components/header-toolbar/header-toolbar.component.scss
+++ b/src/app/components/header-toolbar/header-toolbar.component.scss
@@ -32,3 +32,9 @@
     height: 24px;
     border-radius: 100%;
 }
+
+.overflow-text {
+  white-space: nowrap; 
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
