--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -21,7 +21,7 @@
         <img src="./../../../assets/images/work-team.png" class="img-list">
         <span class="ml-3">จัดสมาชิก</span>
       </a>
-      <a mat-list-item
+      <a mat-list-item (click)="onMonitor();sidenavService.closeNav();"
         *ngIf="userAuth.roles[0] === 'staff' || userAuth.roles[0] === 'owner' || userAuth.roles[0] === 'admin'">
         <img src="./../../../assets/images/list.png" class="img-list">
         <span class="ml-3">จัดการรายการขาย</span>
