--- a/src/app/pages/order-report-detail/order-report-detail.component.html
+++ b/src/app/pages/order-report-detail/order-report-detail.component.html
@@ -74,7 +74,7 @@
 </div>
 <div class="row mb-3">
   <div class="col-12 text-right">
-    <button mat-stroked-button color="accent">ย้อนกลับ</button>
+    <button mat-stroked-button color="accent" (click)="goBack()">ย้อนกลับ</button>
     <button mat-stroked-button color="accent" class="ml-2">พิมพ์ใบเบิกสินค้า</button>
   </div>
 </div>
