--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -6,7 +6,7 @@
           <span>ชื่อทีม: เพียวเอง</span>
         </div>
         <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block">
-          <button mat-stroked-button color="accent" class="style-btn mr-2">รายการเบิก</button>
+          <button mat-stroked-button color="accent" (click)="gotoOrderReport()" class="style-btn mr-2">รายการเบิก</button>
           <button mat-stroked-button color="accent" class="style-btn">ทำการเบิกเเล้ว</button>
         </div>
         <div class="col-12 col-xs-12 col-sm-12 col-md-3 d-block d-xs-block d-sm-none d-md-none">
