--- a/src/app/pages/order-report-detail/order-report-detail.component.html
+++ b/src/app/pages/order-report-detail/order-report-detail.component.html
@@ -36,7 +36,7 @@
 
 <div class="row mt-3 border-all border-right mb-3">
   <div class="col-4 ">
-    <p class="mt-2 mb-2">ชื่อสินค้า</p>
+    <p class="mt-2 mb-2">ผู้รับ</p>
   </div>
   <div class="col-4 ">
     <p class="mt-2 mb-2">รายละเอียด</p>
