--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -4,7 +4,7 @@
       <div *ngFor="let item of [1,2,3,4]">
         <div class="row mt-3">
           <div class="ol-12 col-xs-12 col-sm-6 col-md-6">
-            <span>ชื่อทีม: เพียวเอง</span>
+            <span>ชื่อทีม: เพียวเองนะจ๊ะ</span>
           </div>
           <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block">
             <button mat-stroked-button color="accent" (click)="gotoOrderReport()"
