--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -30,7 +30,11 @@
   </mat-tab>
 
   <mat-tab label="รอการเเพ็ค">
-
+    <div class="row">
+      <div class="col-12">
+        
+      </div>
+    </div>
   </mat-tab>
 
   <mat-tab label="รอการจัดส่ง">
