--- a/src/app/pages/order-list/order-list.component.scss
+++ b/src/app/pages/order-list/order-list.component.scss
@@ -45,7 +45,7 @@
     width: 100% !important;
 }
 
-.div-content{
+.div-content {
     height: 78vh;
     overflow-y: auto;
     overflow-x: hidden !important;
@@ -55,6 +55,15 @@
     border-color: #ff4081;
 }
 
-.bg-white{
+.bg-white {
     background-color: white;
 }
+
+// .swal2-popup.swal2-styled.swal2-confirm {
+//     border: 1px solid;
+//     border-radius: .25em;
+//     background: initial;
+//      background-color: #3085d6; 
+//     color: #ff4081;
+//     font-size: 1.0625em;
+// }
