--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -46,7 +46,7 @@
                 <span style="display: block" class="mt-2">รหัสใบสั่งซื้อ: 1100501307564</span>
                 <span style="display: block">ชื่อผู้สั่ง: พลวัฒน์ ช่างเก็บ</span>
                 <span style="display: block" class="mb-2">รวม: 1500</span>
-                <div class="border-top mt-2 min-label-height"> 
+                <div class="border-top mt-2 min-label-height">
                   <span style="display: block" class="mt-2">เลขที่พัสดุ: {{data[datalength].trackno}}</span>
                   <span style="display: block">รหัสใบสั่งซื้อ: {{data[datalength].orderno}}</span>
                   <span style="display: block">ชื่อผู้สั่ง: {{data[datalength].name}}</span>
@@ -74,10 +74,69 @@
   </mat-tab>
 
   <mat-tab label="รอการจัดส่ง">
-
+    <div class="row">
+      <div class="col-12">
+        <div class="border-bt" *ngFor="let item of [1]">
+          <div>
+            <div class="row mt-3">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-6">
+                <h5 class="mb-0">รหัสใบสั่งซื้อ: 110050308564</h5>
+                <h5 class="mb-0">ชื่อทีม: เพียวเองนะจ๊ะ</h5>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block">
+                <button mat-stroked-button color="accent" class="style-btn">จัดส่งเเล้ว</button>
+              </div>
+            </div>
+            <div class="row mt-2 mb-3 scroll-x">
+              <div class="col-8 col-sm-6 col-md-4 col-lg-3 ml-3 mt-2 mb-2 border-order" *ngFor="let item of [1,2,3,4]">
+                <span style="display: block" class="mt-2">รหัสใบสั่งซื้อ: 1100501307564</span>
+                <span style="display: block">ชื่อผู้สั่ง: พลวัฒน์ ช่างเก็บ</span>
+                <span style="display: block" class="mb-2">รวม: 1500</span>
+                <div class="border-top mt-2 min-label-height">
+                  <span style="display: block" class="mt-2">เลขที่พัสดุ: {{data[datalength].trackno}}</span>
+                  <span style="display: block">รหัสใบสั่งซื้อ: {{data[datalength].orderno}}</span>
+                  <span style="display: block">ชื่อผู้สั่ง: {{data[datalength].name}}</span>
+                  <span style="display: block" class="mb-2">จำนวนสินค้า: {{data[datalength].totalqty}} ชิ้น</span>
+                </div>
+                <mat-paginator [length]="data.length" [pageSizeOptions]="pageSizeOptions" [hidePageSize]="true"
+                  class="full-width" (page)="pageEvent = $event;" (click)="page(pageEvent)"></mat-paginator>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </mat-tab>
 
   <mat-tab label="เสร็จสิ้น">
-
+    <div class="row">
+      <div class="col-12">
+        <div class="border-bt" *ngFor="let item of [1]">
+          <div>
+            <div class="row mt-3">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-6">
+                <h5 class="mb-0">รหัสใบสั่งซื้อ: 110050308564</h5>
+                <h5 class="mb-0">ชื่อทีม: เพียวเองนะจ๊ะ</h5>
+              </div>
+            </div>
+            <div class="row mt-2 mb-3 scroll-x">
+              <div class="col-8 col-sm-6 col-md-4 col-lg-3 ml-3 mt-2 mb-2 border-order" *ngFor="let item of [1,2,3,4]">
+                <span style="display: block" class="mt-2">รหัสใบสั่งซื้อ: 1100501307564</span>
+                <span style="display: block">ชื่อผู้สั่ง: พลวัฒน์ ช่างเก็บ</span>
+                <span style="display: block" class="mb-2">รวม: 1500</span>
+                <div class="border-top mt-2 min-label-height">
+                  <span style="display: block" class="mt-2">เลขที่พัสดุ: {{data[datalength].trackno}}</span>
+                  <span style="display: block">รหัสใบสั่งซื้อ: {{data[datalength].orderno}}</span>
+                  <span style="display: block">ชื่อผู้สั่ง: {{data[datalength].name}}</span>
+                  <span style="display: block" class="mb-2">จำนวนสินค้า: {{data[datalength].totalqty}} ชิ้น</span>
+                </div>
+                <mat-paginator [length]="data.length" [pageSizeOptions]="pageSizeOptions" [hidePageSize]="true"
+                  class="full-width" (page)="pageEvent = $event;" (click)="page(pageEvent)"></mat-paginator>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </mat-tab>
 </mat-tab-group>
