--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -40,6 +40,9 @@
                 <h5 class="mb-0">รหัสใบสั่งซื้อ: 110050308564</h5>
                 <h5 class="mb-0">ชื่อทีม: เพียวเองนะจ๊ะ</h5>
               </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block">
+                <button mat-stroked-button color="accent" class="style-btn">เเพ็คสินค้าเเล้ว</button>
+              </div>
             </div>
             <div class="row mt-2 mb-3 scroll-x">
               <div class="col-8 col-sm-6 col-md-4 col-lg-3 ml-3 mt-2 mb-2 border-order" *ngFor="let item of [1,2,3,4]">
