--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -73,7 +73,7 @@
                     <button mat-stroked-button color="accent" class="full-width btn-list-style">พิมพ์</button>
                   </div>
                   <div class="col-6 pl-0 pr-0">
-                    <button mat-stroked-button color="accent" class="full-width btn-list-style">เพิ่มกล่อง</button>
+                    <button mat-stroked-button color="accent" class="full-width btn-list-style" (click)="addBox()" >เพิ่มกล่อง</button>
                   </div>
                 </div>
               </div>
