--- a/src/app/modal/modal-remark/modal-remark.component.html
+++ b/src/app/modal/modal-remark/modal-remark.component.html
@@ -1,24 +1,24 @@
-<div class="row ml-1 border-bt">
-  <div class="col-12 mt-3 mb-3 text-left">
-    <h5 class="mb-0">หมายเหตุ</h5>
+<div class="row ml-1 border-bt" name="divRowHeadRemark">
+  <div class="col-12 mt-3 mb-3 text-left" name="divColHeadRemark">
+    <h5 name="headRemark" class="mb-0">หมายเหตุ</h5>
   </div>
 </div>
 
-<div name="divTitleModal " class="row ml-1 border-bt mr-1">
-  <div  class="col-12">
-    <form>
-      <mat-form-field class="example-full-width">
-        <input matInput>
+<div name="divRowKeyRemark" class="row ml-1 border-bt mr-1">
+  <div name="divColKeyRemark"  class="col-12">
+    <form name="formKeyRemark">
+      <mat-form-field name="mat-form-field-remark" class="example-full-width">
+        <input name="keyRemark" matInput>
       </mat-form-field>
     </form>
   </div>
 </div>
 
-<div name="rowFooter" class="row mt-3 mb-3">
-  <div name="col2ButtonConfirm" class="col-6 text-left">
-    <button class="ml-4 border-btn" mat-stroked-button color="accent">ตกลง</button>
+<div name="rowbtn" class="row mt-3 mb-3">
+  <div name="divBtnConfirm" class="col-6 text-left">
+    <button name="btnConfirm" class="ml-4 border-btn" mat-stroked-button color="accent">ตกลง</button>
   </div>
-  <div name="col3ButtonCancel" class="col-6 text-right">
-    <button class="mr-4" mat-stroked-button color="accent">ยกเลิก</button>
+  <div name="divBtnCancel" class="col-6 text-right">
+    <button name="btnCancel" class="mr-4" mat-stroked-button color="accent">ยกเลิก</button>
   </div>
 </div>
